# practical_robot_tools

./: README.md
arduino_code/: readme.txt
arduino_code/encoder_tick_pub/: encoder_tick_pub.ino
arduino_code/quadrature_encoder_tick_pub/: readme.md
arduino_code/quadrature_encoder_tick_pub/QuadratureEncoderInt16/: QuadratureEncoderInt16.h
arduino_code/quadrature_encoder_tick_pub/encoder_tick_pub/: encoder_tick_pub.ino
arduino_ros_relay_control/: CMakeLists.txt  README.md  package.xml
arduino_ros_relay_control/arduino_code/ros_arduino/: ros_arduino.ino
arduino_ros_relay_control/include/arduino_ros_relay_control/: device_manager.h
arduino_ros_relay_control/src/: arduino_interface_manager_node.cpp
cmd_vel_prioritizer/: CMakeLists.txt  package.xml  readme.md
cmd_vel_prioritizer/launch/: cmd_vel_prioritizer.launch
cmd_vel_prioritizer/src/: cmd_vel_prioritizer.cpp  initial_heading.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros_arduino/include/ros_arduino/ros_arduino/: Data.h  ROS2Bool.h  ROS2Msg.h  ROS2MsgTypes.h  SerialMessage.h  SerialMessageTypes.h  device_manager.h
install/ros_arduino/share/ament_index/resource_index/package_run_dependencies/: ros_arduino
install/ros_arduino/share/ament_index/resource_index/parent_prefix_path/: ros_arduino
install/ros_arduino/share/ros_arduino/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_arduino/share/ros_arduino/cmake/: ros_arduinoConfig-version.cmake  ros_arduinoConfig.cmake
install/ros_arduino/share/ros_arduino/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
ros_arduino/: CMakeLists.txt  README.md  package.xml
ros_arduino/arduino_code/ros2_arduino/: ros2_arduino.ino
ros_arduino/arduino_code/ros2_arduino/ros2_arduino/: SerialMessage.cpp  SerialMessage.h  serialization.h
ros_arduino/arduino_code/ros2_arduino_pin_ctrl/: Pin.cpp  Pin.h  PinConfig.h  SerialMessage.cpp  SerialMessage.h  SerialMessageTypes.h  SerialPackager.cpp  SerialPackager.h  ros2_arduino_pin_ctrl.ino  serialization.cpp  serialization.h
ros_arduino/arduino_code/ros_arduino/: ros_arduino.ino
ros_arduino/include/ros_arduino/: PinDevice.h  ROS2Message.h  SerialMessage.h  ros2MsgTypes.h  serialization.h
ros_arduino/launch/: serial_driver_bridge_node.launch.py
ros_arduino/params/: serial_driver_bridge_params.yaml
ros_arduino/src/: PinDevice.cpp  ROS2Message.cpp  SerialMessage copy.cpp  SerialMessage.cpp  arduino_pin_ctrl_test_node.cpp  ros2_arduino_pin_ctrl_node.cpp  serialization.cpp  test_protocol.cpp  test_serial_sending.cpp
ros_arduino/test/: serial_message_test.cpp
rplidar_motor_control/: CMakeLists.txt  package.xml  readme.md
rplidar_motor_control/src/: rplidar_motor_control.MINE  rplidar_motor_control.cpp
